<resources>
    <string name="app_name">Shop</string>
    <string name="judul">Fill your account detail</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="jekel">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_crential_login">Enter Your Crential Login</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in">Sign In</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
</resources>