<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".user.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvJudul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/judul"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/back_edit_text"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="10dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtNama"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/back_edit_text"
                    android:drawableStart="@drawable/ic_nama"
                    android:drawablePadding="10dp"
                    android:hint="@string/nama_lengkap"
                    android:inputType="textCapCharacters"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/back_edit_text"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/back_edit_text"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/edtRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/back_edit_text"
                    android:drawableStart="@drawable/ic_re_password"
                    android:drawablePadding="10dp"
                    android:hint="Konfirmasi Password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/back_edit_text"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:hint="Nomor HP"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/back_edit_text"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_gender"
                        android:drawablePadding="5dp"
                        android:text="@string/jekel"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/rgJekel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbPria"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pria"
                            android:textColor="@color/black"
                            android:textSize="14sp" />


                        <RadioButton
                            android:id="@+id/rbWanita"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wanita"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alamat_lengkap"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/provinsi"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/back_edit_text"
                        android:drawableLeft="@drawable/ic_provinsi"
                        android:drawablePadding="5dp"
                        android:hint="@string/provinsi"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/kota"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/back_edit_text"
                        android:drawableLeft="@drawable/ic_city"
                        android:drawablePadding="5dp"
                        android:hint="@string/kota"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</RelativeLayout>